<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>throughput_test</name>
  <version>0.1.0</version>
  <description>ROS 2 performance tests for high-bandwidth topics.</description>
  <maintainer email="eborghi@ekumenlabs.com">Emiliano Borghi</maintainer>
  <license>Apache License 2.0</license>
  <author email="eborghi@ekumenlabs.com">Emiliano Borghi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>realsense2_camera_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_camera_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tracetools_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
